# OpenVAF

./: .gitignore  .gitmodules  ARCH_SPECIFIC_VALUES.md  CLAUDE.md  Cargo.toml  INKWELL_MIGRATION.md  README.md  build-macos.sh  build.sh  configure  rustfmt.toml  test-macos.sh  update-all-snapshots.sh  update-snapshots.sh
.github/workflows/: build-viz.yml  deploy-viz.yml  determinism-check.yml  preview-viz.yml  release.yml  rust-ci.yml
docs/: .gitignore  book.toml  mir-opcodes.md  osdi-interface.md  osdi_v3p0.md  osdi_v4p0.md  sim_back-context.md  sim_back-dae.md  sim_back-init.md  sim_back-topology.md  sim_back.md
docs/VAMS-LRM-2023/: 00-front-matter.md  01-introduction.md  02-lexical-conventions.md  03-data-types.md  04-expressions.md  05-analog-behavior.md  06-hierarchical-structures.md  07-mixed-signal.md  08-scheduling-semantics.md  09-system-tasks-functions.md  10-compiler-directives.md  11-using-vpi-routines.md  12-vpi-routine-definitions.md  README.md  annex-a-formal-syntax.md  annex-b-keywords.md  annex-c-analog-subset.md  annex-d-standard-definitions.md  annex-e-spice-compatibility.md  annex-f-discipline-resolution.md  annex-g-change-history.md  annex-h-glossary.md
docs/src/: SUMMARY.md  introduction.md
docs/src/details/: osdi.md  performance.md  verilog_a_standard.md
docs/src/developer/: codebase.md  testing.md
docs/src/getting-started/: examples.md  installation.md  usage.md
docs/src/help/: compact_models.md  contributing.md  faq.md
integration_tests/BUILTIN_PRIMITIVES/: builtin_primitives.va
integration_tests/EKV/: ekv.va
integration_tests/MODULE_INST/: module_inst.va
lib/arena/: Cargo.toml
lib/bforest/src/: map.rs  node.rs  path.rs  pool.rs  set.rs
lib/bitset/src/: lib.rs  matrix.rs
lib/mini_harness/src/: lib.rs
lib/stdx/src/: ieee64.rs  lib.rs
lib/typed_indexmap/: Cargo.toml
lib/typed_indexmap/src/: map.rs  set.rs
melange/core/src/: expr.rs  simulation.rs  veriloga.rs
openvaf/basedb/: Cargo.toml  README.md
openvaf/basedb/src/: lib.rs  line_index.rs  lints.rs
openvaf/hir/: README.md
openvaf/hir/src/: body.rs  db.rs  lib.rs
openvaf/hir/tests/: data_tests.rs
openvaf/hir_def/: Cargo.toml  README.md
openvaf/hir_def/src/: body.rs  builtin.rs  db.rs  item_tree.rs  lib.rs  nameres.rs
openvaf/hir_def/tests/: data_tests.rs
openvaf/hir_lower/: Cargo.toml  README.md
openvaf/hir_lower/src/: callbacks.rs  expr.rs  fmt.rs  lib.rs  parameters.rs
openvaf/hir_lower/tests/: data_tests.rs
openvaf/hir_ty/: README.md
openvaf/hir_ty/src/: db.rs  inference.rs  lower.rs  types.rs
openvaf/lexer/: README.md
openvaf/linker/: README.md
openvaf/linker/src/: lib.rs
openvaf/mir/: Cargo.toml  README.md
openvaf/mir/src/: cursor.rs  dfg.rs  entities.rs  flowgraph.rs  instructions.rs  layout.rs  lib.rs  serialize.rs  validation.rs
openvaf/mir_autodiff/: Cargo.toml  README.md
openvaf/mir_autodiff/src/: builder.rs  lib.rs  live_derivatives.rs  postorder.rs  subgraph.rs
openvaf/mir_build/: README.md
openvaf/mir_build/src/: lib.rs
openvaf/mir_interpret/: README.md
openvaf/mir_interpret/src/: data.rs
openvaf/mir_llvm/: Cargo.toml  README.md
openvaf/mir_llvm/src/: builder.rs  callbacks.rs  context.rs  declarations.rs  intrinsics.rs  lib.rs  types.rs
openvaf/mir_opt/: Cargo.toml  README.md
openvaf/mir_opt/src/: global_value_numbering.rs  simplify_cfg.rs  split_tainted.rs
openvaf/mir_reader/: README.md
openvaf/openvaf/: Cargo.toml  README.md
openvaf/openvaf-driver/: Cargo.toml  README.md
openvaf/openvaf-driver/src/: cli_def.rs  cli_process.rs  crash_report.rs
openvaf/openvaf-viz/: Cargo.toml
openvaf/openvaf-viz/src/: compiled_viz.rs  json.rs  lib.rs  main.rs  mir_viz.rs
openvaf/openvaf-viz/src/html/: assets.rs  mod.rs  template.rs
openvaf/openvaf/src/: lib.rs
openvaf/openvaf/tests/: integration.rs
openvaf/openvaf/tests/load/: mod.rs
openvaf/osdi/: Cargo.toml  README.md  build.rs
openvaf/osdi/src/: access.rs  bitfield.rs  compilation_unit.rs  eval.rs  inst_data.rs  lib.rs  load.rs  metadata.rs  model_data.rs  ndatable.rs  setup.rs  tests.rs
openvaf/osdi/tests/: data_tests.rs
openvaf/parser/: README.md
openvaf/parser/src/: token_set.rs
openvaf/preprocessor/: README.md
openvaf/sim_back/: Cargo.toml  README.md
openvaf/sim_back/src/: context.rs  dae.rs  init.rs  lib.rs  module_info.rs  topology.rs
openvaf/syntax/: README.md  veriloga.ungram
openvaf/syntax/src/: lib.rs  syntax_node.rs  validation.rs
openvaf/test_data/contributions/: psp103_mir.snap  psp103_topology.snap
openvaf/test_data/item_tree/: module_inst.def_map  module_inst.item_tree  module_inst.va
openvaf/test_data/osdi/: amplifier.snap  asmhemt.snap  bsim3.snap  bsim4.snap  bsim6.snap  bsimbulk.snap  bsimcmg.snap  bsimimg.snap  bsimsoi.snap  builtin_primitives.snap  cccs.snap  current_source.snap  diode.snap  diode_cmc.snap  diode_lim.snap  ekv.snap  ekv_longchannel.snap  hicuml2.snap  hisim2.snap  hisimhv.snap  hisimsotb.snap  mextram.snap  module_inst.snap  mvsg_cmc.snap  noise.snap  psp102.snap  psp103.snap  resistor.snap  strings.snap  vacask_bsim3v3.snap  vacask_bsim4v8.snap  vacask_bsimbulk106.snap  vacask_capacitor.snap  vacask_diode.snap  vacask_inductor.snap  vacask_opamp.snap  vacask_resistor.snap  vacask_spice_bjt.snap  vacask_spice_bsim3v3.snap  vacask_spice_bsim4v8.snap  (+18 more)
openvaf/test_data/ui/: analog_in_cond.va
openvaf/test_data/ui_allow_analog_cond/: diode_with_conditionals.va
openvaf/tokens/: README.md
openvaf/vfs/: Cargo.toml  README.md
openvaf/vfs/src/: path_interner.rs
pr-preview/pr-18/: index.html
pr-preview/pr-18/AMPLIFIER/: amplifier.html
pr-preview/pr-18/BUILTIN_PRIMITIVES/: builtin_primitives.html
pr-preview/pr-20/: index.html
scripts/: determinism-capture.sh  determinism-compare.sh
sourcegen/: Cargo.toml
sourcegen/src/: hir_builtins.rs  osdi.rs
verilogae/verilogae/: Cargo.toml
verilogae/verilogae_ffi/: Cargo.toml
verilogae/verilogae_py/: Cargo.toml
verilogae/verilogae_py/src/: ffi.rs  lib.rs  load.rs  model.rs  typeref.rs
xtask/src/: flags.rs  main.rs
(+47 files in other folders)
