[package]
name = "mir_llvm"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

[lib]
doctest = false


[dependencies]
llvm-sys = {version="211.0.0", features=["prefer-dynamic"]} 
#target-lexicon = "0.12"
mir = { version = "0.0.0", path = "../mir" }
target = { version = "0.0.0", path = "../target" }
base_n = {version = "1", path="../../lib/base_n"}

typed-index-collections = "3.1"
arrayvec = "0.7"
ahash = "0.8"
lasso = { version = "0.7", features = ["ahash"] }
libc = "0.2"
log = "0.4.19"
