[package]
name = "mir_llvm"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

[lib]
doctest = false

[features]
# No default - user must specify --features llvm18/llvm19/llvm20/llvm21
llvm18 = ["dep:llvm-sys-181"]
llvm19 = ["dep:llvm-sys-191"]
llvm20 = ["dep:llvm-sys-201"]
llvm21 = ["dep:llvm-sys-211"]

[dependencies]
llvm-sys-181 = { package = "llvm-sys", version = "181.2.0", features = ["prefer-dynamic"], optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191.0.0", features = ["prefer-dynamic"], optional = true }
llvm-sys-201 = { package = "llvm-sys", version = "201.0.1", features = ["prefer-dynamic"], optional = true }
llvm-sys-211 = { package = "llvm-sys", version = "211.0.0", features = ["prefer-dynamic"], optional = true }
#target-lexicon = "0.12"
mir = { version = "0.0.0", path = "../mir" }
target = { version = "0.0.0", path = "../target" }
base_n = {version = "1", path="../../lib/base_n"}

typed-index-collections = "3.1"
arrayvec = "0.7"
ahash = "0.8"
lasso = { version = "0.7", features = ["ahash"] }
libc = "0.2"
log = "0.4.19"
