[package]
name = "openvaf-driver"
version = "23.5.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "openvaf-r"
path = "src/main.rs"
doctest = false
test = false

[features]
# No default - user must specify --features llvm18/llvm19/llvm20/llvm21
llvm18 = ["openvaf/llvm18"]
llvm19 = ["openvaf/llvm19"]
llvm20 = ["openvaf/llvm20"]
llvm21 = ["openvaf/llvm21"]

[dependencies]

openvaf = { version = "0.1.2", path = "../openvaf", default-features = false }

clap = "=4.3"
directories-next = "2"
path-absolutize = "3.1.0"
anyhow = "1"
termcolor = "1.2"
camino = "1.1.4"
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
log = "0.4.19"
backtrace-ext = "0.2.1"
backtrace = "0.3.68"

mimalloc = { version = "*", default-features = false}
#llvm-sys = { version = "181.2.0", features = ["prefer-dynamic"] }

[dev-dependencies]
xshell = "0.2.3"
stdx = { version = "0.0.0", path = "../../lib/stdx" }
mini_harness = { version = "0.0.1", path = "../../lib/mini_harness" }

[[test]]
name = "cli"
harness = false
