[package]
name = "openvaf-viz"
version = "0.1.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"
description = "Interactive visualization tool for OpenVAF intermediate representations"

[[bin]]
name = "openvaf-viz"
path = "src/main.rs"
doctest = false
test = false

[dependencies]
# OpenVAF crates
basedb = { version = "0.0.0", path = "../basedb" }
hir = { version = "0.0.0", path = "../hir" }
hir_lower = { version = "0.0.0", path = "../hir_lower" }
mir = { version = "0.0.0", path = "../mir" }
sim_back = { version = "0.0.0", path = "../sim_back" }
paths = { version = "0.0", path = "../../lib/paths" }

# CLI
clap = { version = "=4.3", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# String interning
lasso = { version = "0.7", features = ["ahash"] }

# Other
anyhow = "1"
camino = "1.1.4"

[dev-dependencies]
expect-test = "1.4"
