[package]
name = "openvaf"
version = "0.1.2"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

[lib]
doctest = false

[features]
# No default - user must specify --features llvm18/llvm19/llvm20/llvm21
llvm18 = ["dep:llvm-sys-181", "mir_llvm/llvm18", "osdi/llvm18"]
llvm19 = ["dep:llvm-sys-191", "mir_llvm/llvm19", "osdi/llvm19"]
llvm20 = ["dep:llvm-sys-201", "mir_llvm/llvm20", "osdi/llvm20"]
llvm21 = ["dep:llvm-sys-211", "mir_llvm/llvm21", "osdi/llvm21"]

[dependencies]

tokens = { version = "0.0.0", path = "../tokens" }
basedb = { version = "0.0.0", path = "../basedb" }
sim_back = { version = "0.0.0", path = "../sim_back" }
osdi = { version = "0.0.0", path = "../osdi", default-features = false }

#llvm = { version = "0.0.0", path = "../llvm" }
llvm-sys-181 = { package = "llvm-sys", version = "181.2.0", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191.0.0", optional = true }
llvm-sys-201 = { package = "llvm-sys", version = "201.0.1", optional = true }
llvm-sys-211 = { package = "llvm-sys", version = "211.0.0", optional = true }
mir_llvm = { version = "0.0.0", path = "../mir_llvm", default-features = false }
hir = { version = "0.0.0", path = "../hir" }
target = { version = "0.0.0", path = "../target" }
linker = { version = "0.0.0", path = "../linker" }

base_n = { version = "1", path = "../../lib/base_n" }
paths = { version = "0.0", path = "../../lib/paths" }

md5 = "0.7"

anyhow = "1"
termcolor = "1.2"
camino = "1.1.4"

[dev-dependencies]
libloading = "0.8"
libc = "0.2"
float-cmp =  "0.9"
mini_harness = { version = "0.0.1", path = "../../lib/mini_harness" }
stdx = { version = "0.0.0", path = "../../lib/stdx" }
expect-test = "1.4"
bitflags = "2.4.1"
indexmap = "2.0"

[[test]]
name = "integration"
harness = false
