[package]
name = "verilogae_ffi"
version = "1.0.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

links = "verilogae"

[lib]
doctest = false


[dependencies]

verilogae = { version = "1.0.0", path = "../verilogae", optional = true, default-features = false }

[features]
default = ["static"]
# No default LLVM - user must specify --features llvm18/llvm19/llvm20/llvm21
static = ["verilogae"]
llvm18 = ["verilogae?/llvm18"]
llvm19 = ["verilogae?/llvm19"]
llvm20 = ["verilogae?/llvm20"]
llvm21 = ["verilogae?/llvm21"]
