[package]
name = "verilogae_py"
version = "1.0.0"
authors = ["DSPOM"]
edition = "2021"
license = "GPL-3.0"

[lib]
doctest = false
crate-type = ["cdylib"]
name = "verilogae_py"

[dependencies]
pyo3-ffi = { version = "0.19", features = [
  "extension-module",
  "generate-import-lib",
] }
verilogae_ffi = { version = "1.0.0", path = "../verilogae_ffi", default-features = false }
libc = "0.2"

[build-dependencies]

pyo3-build-config = { version = "0.19", features = ["resolve-config"] }


[features]

default = ["static"]
# No default LLVM - user must specify --features llvm18/llvm19/llvm20/llvm21
static = ["verilogae_ffi/static"]
llvm18 = ["verilogae_ffi/llvm18"]
llvm19 = ["verilogae_ffi/llvm19"]
llvm20 = ["verilogae_ffi/llvm20"]
llvm21 = ["verilogae_ffi/llvm21"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(Py_3_8)', 'cfg(Py_3_10)'] }
